# Genetic-Algorithm

./: CMakeLists.txt  LICENSE.md  README.md
includes/: CCircuit.h  CUnit.h  Genetic_Algorithm.h
src/: CCircuit.cpp  Genetic_Algorithm.cpp  README.md  main.cpp
tests/: test1.cpp  test2.cpp
visualization/: README.md  circuit_vector.txt  visualisation.py
